# model-in-package-sample

./: MANIFEST.in  README.md  setup.cfg  this_is_usage.py
src/mymodel/: __init__.py  version.py
src/mymodel/titanic_sample/models/LogisticRegression/: model.pkl
src/mymodel/titanic_sample/models/RandomForestClassifier/: model.pkl
src/mymodel/titanic_sample/models/SVC/: model.pkl
src/mymodel/titanic_sample/train/: README.md  lr.py  rf.py  svc.py
