[metadata]
name = mymodel
version = attr: src.mymodel.version.VERSION
author = 'Motonobu Kuryu'
author_email = 'revision279@gmail.com'
description = 'this is samplel'
long_description = file: README.md
license = MIT
url =


[options]
package_dir =
        = src

packages = find:

install_requires =
    scikit-learn==0.23.1
    pandas==1.0.4

include_package_data = True
zip_safe = False

[options.packages.find]
where=src

